# API_MCP_RAGAnything_LightRAG

./: .coverage  .dockerignore  .env.example  .env.lightrag.server.example  .gitignore  Dockerfile  Dockerfile.db  Dockerfile.lightrag  IMPLEMENTATION.md  README.md  docker-compose.override.yml.example  docker-compose.yml  pyproject.toml  pyrightconfig.json  test_doc.html  test_doc.txt
.github/: copilot-instructions.md
src/: config.py  dependencies.py  main.py
src/application/api/: indexing_routes.py  lightrag_proxy_routes.py  mcp_tools.py  query_routes.py
src/application/requests/: indexing_request.py  query_request.py
src/application/use_cases/: index_batch_use_case.py  index_file_use_case.py  index_folder_use_case.py  lightrag_proxy_use_case.py  query_use_case.py
src/domain/entities/: indexing_result.py  lightrag_proxy_entities.py  query_entity.py  query_result.py
src/domain/ports/: lightrag_proxy_client.py  rag_engine.py
src/domain/services/: indexing_service.py
src/infrastructure/proxy/: lightrag_proxy_client.py
src/infrastructure/rag/: lightrag_adapter.py
tests/: conftest.py
tests/doubles/: double_rag_engine.py
tests/unit/: test_index_file_use_case.py  test_index_folder_use_case.py
